Fixed layout shift when all tabs are inactive by default

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -106,7 +106,9 @@
     .product.data.items {
         .item.content {
             display: none;
-            &:nth-child(2) {
+        }
+        &:not([data-mage-init*='"active":"-1"']) {
+            .item.content:nth-child(2) {
                 display: block;
             }
         }
